syntax = "proto3";

package apitoken;

message UseAccessTokenRequest {
  string token = 1;
}

message UseAccessTokenResponse {
  // Define any response fields if needed
  string result = 1;
}

service ApiTokenService {
  rpc useToken(UseAccessTokenRequest) returns (UseAccessTokenResponse) {}
}
